perf：chat主流程优化